RESOLVED FIXED159030
Exception is not thrown when shipping method is an invalid amount
https://bugs.webkit.org/show_bug.cgi?id=159030
Summary Exception is not thrown when shipping method is an invalid amount
Anders Carlsson
Reported 2016-06-22 12:03:31 PDT
Exception is not thrown when shipping method is an invalid amount
Attachments
Patch (2.23 KB, patch)
2016-06-22 12:04 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-06-22 12:04:40 PDT
Anders Carlsson
Comment 2 2016-06-22 12:10:13 PDT
Note You need to log in before you can comment on or make changes to this bug.