Exception is not thrown when shipping method is an invalid amount https://bugs.webkit.org/show_bug.cgi?id=159030 rdar://problem/26700413

Reviewed by Tim Horton.

* Modules/applepay/ApplePaySession.cpp:
(WebCore::createShippingMethods):
Bail if createShippingMethod returns Nullopt.

(WebCore::createPaymentRequest):
Bail if createShippingMethods returns Nullopt.

Canonical link: https://commits.webkit.org/177109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202342 268f45cc-cd09-0410-ab3c-d52691b4dbfc